Thieving tiers, NPC restriction, item-usage merge, and loot data
Pickpocketing: Off / Coins+Pouch / +NPC card / All dropdown with H.A.M.
and Master Farmer Insanity toggles; ships the merged pickpocket loot
data and karambwan burnt-role fix.

NPC restriction: combat/spell/hide toggles collapse into one dropdown
(Off / Prevent Combat / Prevent Interaction / Hide NPCs, default
Prevent Combat). Option hiding is inherent to the tiers; item-on-NPC
stays allowed in Prevent Combat so quests remain completable.

Restrict equipping + potion drinking merge into Restrict item usage.
One-time migration maps every retired key; off wins where users had
split choices. Item Marking moves to the top of Visuals with Fade /
Fade + Icon labels, default Fade + Icon.